PR changes and re-use existing components
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>